--- a/exercises/00_welcome.qmd
+++ b/exercises/00_welcome.qmd
@@ -10,7 +10,7 @@ Quarto (the successor of "R Markdown") enables you to weave together content and
 
 ## Running Code
 
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. 
+When you click the **Render** button a document will be generated that includes both content and the output of embedded code.
 
 You can embed code like this:
 
@@ -28,6 +28,6 @@ redcap_uri <- "https://redcap.chop.edu/api/"
 ## TODO: use a secure creds file instead of hardcoding this
 token <- "37BCFC38D45F10C47EAF4D8B97BFC32F"
 
-## TODO: Right now this has lots of empty rows. Come up with a better solution.
+## TODO: Right now this has lots of empty rows. Come up with a better solution. Maybe download from a different, simpler database?
 my_redcap_data <- redcap_read_oneshot(redcap_uri, token, forms = "demographics")$data
 ```
