--- a/exercises/03_group_exercise.qmd
+++ b/exercises/03_group_exercise.qmd
@@ -1,62 +1,39 @@
 ---
-title: "Welcome to the REDCap Workshop!"
+title: "Group Exercise"
 format: html
 editor: visual
 ---
 
-## Quarto (formerly known are R Markdown)
+## Recreate
 
-## Running a Code Chunk
+In this section, your challenge is to work with your small group to recreate the object shown below. This is a tibble with three columns derived from the `demographics` table. Use the empty code chunk to write the code to recreate this tibble.
 
-```{r}
-1+1
-```
+![](recreate_tbl.png){width="494"}
 
 ```{r}
-library(REDCapR)
+# Your code here!
 
-redcap_uri <- "https://redcap.chop.edu/api/"
+library(REDCapTidieR)
 
-## TODO: use a secure creds file instead of hardcoding this
-token <- "37BCFC38D45F10C47EAF4D8B97BFC32F"
+redcart <- read_redcap(redcap_uri, token)
 
-##
-my_redcap_data <- redcap_read_oneshot(redcap_uri, token, forms = "demographics")$data
+redcart |>
+  extract_tibble("demographics") |>
+  select(infseq_id, demo_last_name, demo_birth_date)
 ```
 
-## Importing COVID19 data from a CSV file
+## Extend
 
-Take a look at the *Files* pane on the bottom right. Note that there is a file named *covid_testing.csv*. The objective of this exercise is to *import* that CSV file into R as a data frame, and then take a first look at its contents using the *Data Viewer*.
+The purpose of the *Extend* part is for you to explore what you've learned on your own and try to take it a step further as a group.
 
-Recall that to import CSV files, we use the *read_csv()* function, which is part of the *tidyverse* package. The *read_csv()* function takes a *filename* as an argument and returns a *data frame*. To capture the data frame in a named object, we use the *assignment operator* ( \<- ).
+For example, you might want to embellish the visualization from the previous exercise. Or you might want to look up the [REDCapTidieR documentation](https://chop-cgtinformatics.github.io/REDCapTidieR/reference/index.html) and try out some of its other functions such as `make_labelled()` or `write_redcap_xlsx()`.
 
-In the following code chunk, we first load the *tidyverse* package and then use the *read_csv()* function to load the *covid_testing.csv* file and capture it in an object named *covid_testing*.
+After the time is over, each group will briefly present what they've worked on.
 
-Run the following code chunk.
+Use the empty code chunk below!
 
-```{r, message = FALSE}
-library(tidyverse)
-covid_testing <- read_csv("covid_testing.csv")
+```{r}
+# Your code here! :)
+
+
 ```
-
-Hint: click on the green triangle in the upper right corner of the code chunk!
-
-## Inspecting a data frame
-
-One thing that Excel does well is to provide an interactive visual representation of the data. This allows you to inspect it by sorting and filtering. RStudio actually does this well, too, with one difference - it won't let you *change* any of the data while you inspect it.
-
-Look on the right at the *Environment* pane (you might have to click on the "Environment" tab) and find the entry *covid_testing*. This is the data frame you just created inside of R's memory. (If you don't see covid_testing, try running the code chunk above again).
-
-On the far right next to *covid_testing*, you will spot a symbol that looks like a small table. Click on it to make the *Data Viewer* appear.
-
-Without writing any code, just by working with the Data Viewer, try to answer the following questions:
-
-1.  How many rows are in the data frame? How many columns?
-
-2.  Go ahead and try to edit one of the values in this viewer. You will find that you can't. It would have been easy for the RStudio programmers to allow editing of specific values, but they decided not to add that feature. Why do you think this was designed that way?
-
-3.  Each row in *covid_testing* represents a single COVID19 test. The value in the *pan_day* column indicates the day (after the start of the pandemic) on which the test sample was taken. On which "pandemic day" was the first test sample taken? The last?
-
-4.  How many tests overall were positive? How many positive tests were there in the first 30 days of the pandemic? (Hint: look at the Filter button)
-
-When you are done, don't forget to click "yes" in the Participants window in Zoom!
