--- a/exercises/01_extract_explore.qmd
+++ b/exercises/01_extract_explore.qmd
@@ -13,21 +13,28 @@ The following code chunk loads the REDCapTidieR package and then uses the `read_
 ```{r}
 library(REDCapTidieR)
 
-redcap_uri <- "https://redcap.chop.edu/api/"
-token <- "37BCFC38D45F10C47EAF4D8B97BFC32F"
+# Load credentials from CSV file
+creds <- retrieve_credential_local("../data-private/credentials.csv", 1)
 
+uri <- creds$uri
+token <- creds$token
+
+# Read the CAR-T cell REDCap data into an object "redcart"
 redcart <- read_redcap(redcap_uri, token)
+
+# Show me redcart!
+redcart
 ```
 
 ## Exploring the REDCapTidieR Supertibble
 
-Take a look at the *Environments* pane to the right. Note that there is an object named `redcart`. This is the **supertibble** you just created inside of R's memory. (If you don't see `redcart`, try running the code chunk above again).
+Take a look at the *Environment* pane to the right. Note that there is an object named `redcart`. This is the **supertibble** you just created inside of R's memory. (If you don't see `redcart`, try running the code chunk above again).
 
-A **tibble** (or **data frame**) is a tabular data structure with rows and columns. A **supertibble** is a tibble that contains tibbles.
+A **tibble** (or **data frame**) is a tabular data structure with rows and columns, similar to a SQL database or an Excel sheet. A **supertibble** is a tibble that contains tibbles.
 
-On the far right next to `redcart`, you will spot an icon that looks like a small table. Click on it to make the *Data Viewer* appear.
+Look again at the *Environment* pane. On the far right next to `redcart`, you will spot an icon that looks like a small table. Click on it to make the *Data Viewer* appear.
 
-The *Data Viewer* is built into the Posit IDE as a handy as to explore data tables.
+The *Data Viewer* is built into the Posit IDE as a handy way explore tibbles.
 
 Go ahead an explore `redcart` to confirm the following features of the supertibble:
 
@@ -36,7 +43,7 @@ Go ahead an explore `redcart` to confirm the following features of the supertibb
 3.  The `redcap_data` column contains tibbles (note the little table icons!)
 4.  By clicking on a tibble object inside the `redcap_data` column you can *drill down* and view the data stored in a specific REDCap instrument.
 
-Without writing any code, just by working with the *Data Viewer*, try to answer the following questions:
+Without writing any code, just by working in the *Data Viewer*, try to answer the following questions:
 
 1.  How many instruments are in the `redcart` database?
 
@@ -46,4 +53,4 @@ Without writing any code, just by working with the *Data Viewer*, try to answer 
 
 4.  Drill down into the `demographics` instrument. How many patients are captured in here? Who is the oldest patient on the trial?
 
-Studies have shown that explaining material you just learned to others can boost memory. So if you're done early, you might want to get up and help out others! :)
+**Studies have shown that explaining material you just learned to others can boost memory. So if you're done early, you might want to get up and help out others! :)**
