--- a/exercises/01_extract_explore.qmd
+++ b/exercises/01_extract_explore.qmd
@@ -53,4 +53,4 @@ Without writing any code, just by working in the *Data Viewer*, try to answer th
 
 4.  Drill down into the `demographics` instrument. How many patients are captured in here? Who is the oldest patient on the trial?
 
-**Studies have shown that explaining material you just learned to others can boost memory. So if you're done early, you might want to get up and help out others! :)**
+**NOTE: Studies have shown that explaining material you just learned to others can boost memory. So if you're done early, you might want to get up and help out others! :)**
