--- a/exercises/01a_redcapr.qmd
+++ b/exercises/01a_redcapr.qmd
@@ -24,8 +24,8 @@ if (packageVersion("REDCapR") < "1.1.9005") {
 We'll discuss tokens in more depth at the end of the workshop. For now, know that a "token" is a secret value that serves as your personal password to a specific REDCap project.
 
 ```{r}
-# path_credential <- "../data-private/credentials.csv"
-path_credential <- "redcapcon_2023_redcap_r_workshop/data-private/credentials.csv"
+path_credential <- "../data-private/credentials.csv"
+# path_credential <- "redcapcon_2023_redcap_r_workshop/data-private/credentials.csv"
 credential  <- REDCapR::retrieve_credential_local(path_credential, 1L)
 credential
 ```
@@ -49,4 +49,11 @@ REDCapR::redcap_event_instruments(
 
 If important details are obscured, use `View()` to see things in a nice scrollable table inside RStudio:
 
-\`\`\`r View(REDCapR::redcap_metadata_read( redcap_uri = credential$redcap_uri,  token = credential$token )\$data)
+```r 
+View(
+  REDCapR::redcap_metadata_read( 
+    credential$redcap_uri, 
+    credential$token 
+  )$data
+)
+```
