--- a/exercises/01a_redcapr.qmd
+++ b/exercises/01a_redcapr.qmd
@@ -6,10 +6,7 @@ editor: visual
 
 ## Extracting Data from REDCap using REDCapR
 
-For the first 10 min, we will download REDCap data using [REDCapR](https://ouhscbbmc.github.io/REDCapR).
-
-### Install latest version of REDCapR
-
+For the first 10 min, we will download data using [REDCapR](https://ouhscbbmc.github.io/REDCapR).
 Let's install with the newest version of REDCapR from GitHub.
 
 ```{r}
@@ -22,17 +19,19 @@ if (packageVersion("REDCapR") < "1.1.9005") {
 ### Retrieve Secure Token
 
 We'll discuss tokens in more depth at the end of the workshop. For now, know that a "token" is a secret value that serves as your personal password to a specific REDCap project.
+We'll retrieve it from a file stored in a (pretend) secured directory.
 
+<!-- path_credential <- "redcapcon_2023_redcap_r_workshop/data-private/credentials.csv" -->
 ```{r}
 path_credential <- "../data-private/credentials.csv"
-# path_credential <- "redcapcon_2023_redcap_r_workshop/data-private/credentials.csv"
-credential  <- REDCapR::retrieve_credential_local(path_credential, 1L)
+credential      <- REDCapR::retrieve_credential_local(path_credential, 1L)
 credential
 ```
 
 ### Peek at Variables, Events, & Instruments
 
-Here's a project of fake data that Stephan created to mimic the CAR-T investigation. The first snippet reveals info from the 368 variables.\
+Stephan created fake data that mimics the real CAR-T investigation.
+The first snippet reveals info from the 368 variables.
 The second reveals info about the combinations of events & instruments.
 
 ```{r}
@@ -57,3 +56,5 @@ View(
   )$data
 )
 ```
+
+![Variable information](images/view-dictionary.png)
