--- a/exercises/01a_redcapr.qmd
+++ b/exercises/01a_redcapr.qmd
@@ -1,10 +1,8 @@
 ---
-title: "01a_redcapr"
+title: "Extracting Data from REDCap using REDCapR"
 format: html
 editor: visual
 ---
-
-## Extracting Data from REDCap using REDCapR
 
 For the first 10 min, we will download data using [REDCapR](https://ouhscbbmc.github.io/REDCapR). Let's install with the newest version of REDCapR from GitHub.
 
@@ -15,9 +13,13 @@ if (packageVersion("REDCapR") < "1.1.9005") {
 }
 ```
 
-### Retrieve Secure Token
+Retrieve Secure Token
+----------------------------
 
-We'll discuss tokens in more depth at the end of the workshop. For now, know that a "token" is a secret value that serves as your personal password to a specific REDCap project. We'll retrieve it from a file stored in a (pretend) secured directory.
+We'll discuss tokens in more depth at the end of the workshop. 
+For now, know that a "token" is a secret value 
+that serves as your personal password to a specific REDCap project. 
+We'll retrieve it from a file stored in a (pretend) secured directory.
 
 <!-- path_credential <- "redcapcon_2023_redcap_r_workshop/data-private/credentials.csv" -->
 
@@ -27,9 +29,12 @@ credential      <- REDCapR::retrieve_credential_local(path_credential, 1L)
 credential
 ```
 
-### Peek at Variables, Events, & Instruments
+Peek at Variables, Events, & Instruments
+----------------------------
 
-Stephan created fake data that mimics the real CAR-T investigation. The first snippet reveals info from the 368 variables. The second reveals info about the combinations of events & instruments.
+Stephan created fake data that mimics the real CAR-T investigation. 
+The first snippet reveals info from the 368 variables. 
+The second reveals info about the combinations of events & instruments.
 
 ```{r}
 REDCapR::redcap_metadata_read(
@@ -56,9 +61,32 @@ View(
 
 ![Variable information](images/view-dictionary.png)
 
-### Download Records with a clean grain, part #1
+Data Frame Grain
+----------------------------
 
-Downloading records from REDCap is easy for classic projects (ie, non-longitudinal & non-repeating). Just pass the url & token to [`REDCapR::redcap_read()`](https://ouhscbbmc.github.io/REDCapR/reference/redcap_read.html).
+All your operations are easier when you have a good understanding of the "grain"
+of each table/data.frame.
+
+A table's grain is what each row represents.  
+If one row represents a distinct patient, 
+the table's grain is *patient*.
+If one row represents a single medication administered to a patient,
+the table's grain is *medication*.
+
+If your data frame has a poorly defined grain
+you'll probably corrupt your data,
+or at least force ugly & brittle hacks into your code.
+
+Grain is so important that I usually my tables are named for it,
+such as `ds_pt` and `ds_med`.
+I like it on the forefront of my mind.
+
+Download Records with a clean grain, part #1
+----------------------------
+
+Downloading records from REDCap is easy for classic projects
+(ie, non-longitudinal & non-repeating). 
+Just pass the url & token to [`REDCapR::redcap_read()`](https://ouhscbbmc.github.io/REDCapR/reference/redcap_read.html).
 
 ``` r
 ds <-
@@ -68,7 +96,8 @@ ds <-
   )$data
 ```
 
-You can also specify constraints like forms, fields, & events for dataset that's tight and relevant.
+You can also specify constraints like forms, fields, & events 
+to make the dataset tight and relevant.
 
 ```{r}
 ds_pt <-
@@ -86,7 +115,8 @@ ds_pt <-
 
 ![Patient-level records](images/view-pt.png)
 
-### Download Records with a dirty grain
+Download Records with a dirty grain
+----------------------------
 
 ```{r}
 ds_mishmash <-
@@ -99,7 +129,8 @@ ds_mishmash <-
 
 ![Mishmash grain](images/view-mishmash.png)
 
-### Download Records with a clean grain, part #2
+Download Records with a clean grain, part #2
+----------------------------
 
 ```{r}
 ds_med <-
