--- a/exercises/03_advanced.qmd
+++ b/exercises/03_advanced.qmd
@@ -1,10 +1,8 @@
 ---
-title: "03_advanced"
+title: "Advanced API Tasks REDCap using REDCapR"
 format: html
 editor: visual
 ---
-
-## Advanced API Tasks REDCap using REDCapR
 
 To start this final section, we will upload data using [REDCapR](https://ouhscbbmc.github.io/REDCapR). Let's install with the newest version of REDCapR from GitHub.
 
@@ -15,115 +13,43 @@ if (packageVersion("REDCapR") < "1.1.9005") {
 }
 ```
 
-### Retrieve Secure Token
+## Writing/Uploading to REDCap
+----------------------------------
 
-We'll discuss tokens in more depth at the end of the workshop. For now, know that a "token" is a secret value that serves as your personal password to a specific REDCap project. We'll retrieve it from a file stored in a (pretend) secured directory.
+Writing data _to_ REDCap is more difficult than reading data _from_ REDCap.
+When you read, you receive data in the structure that the REDCap provides you.
+You have some control about the columns, rows, and data types,
+but there is not a lot you have to be concerned.
 
-<!-- path_credential <- "redcapcon_2023_redcap_r_workshop/data-private/credentials.csv" -->
+In contrast, the structure of the dataset you send to the REDCap server must be precise.
+You need to pass special variables so that the REDCap server understands the
+hierarchical structure of the data points.
 
-```{r}
-path_credential <- "../data-private/credentials.csv"
-credential      <- REDCapR::retrieve_credential_local(path_credential, 1L)
-credential
-```
+We'll walk through that process, 
+but not actually write/upload,
+because we'd step on each other's toes using the same REDCap server.
 
-### Peek at Variables, Events, & Instruments
+Strategy
+----------------------------------
 
-Stephan created fake data that mimics the real CAR-T investigation. The first snippet reveals info from the 368 variables. The second reveals info about the combinations of events & instruments.
+REDCapTidieR makes your life easier when you read 
+from a project with longitudinal or repeating structures.
+It breaks down the calls for each part and hands you tidy rectangles.
 
-```{r}
-REDCapR::redcap_metadata_read(
-  redcap_uri  = credential$redcap_uri,
-  token       = credential$token
-)$data
+But no package holds your hand for *writing* to REDCap.
+You'll need to create a tidy grain for each rectangle/data.frame,
+and upload each in a separate call.
 
-REDCapR::redcap_event_instruments(
-  redcap_uri  = credential$redcap_uri,
-  token       = credential$token
-)$data
-```
+As described in the [Retrieving Longitudinal and Repeating Structures](https://ouhscbbmc.github.io/REDCapR/articles/longitudinal-and-repeating.html) vignette,
+the best way to read and write data from projects with longitudinal/repeating elements
+is to break up the "block matrix" dataset into individual datasets.
+Each rectangle should have a coherent grain.
 
-If important details are obscured, use `View()` to see things in a nice scrollable table inside RStudio:
+Following this strategy, we'll write to the REDCap server in two distinct steps:
 
-``` r
-View(
-  REDCapR::redcap_metadata_read( 
-    credential$redcap_uri, 
-    credential$token 
-  )$data
-)
-```
+1. Upload the patient-level instrument(s)
+1. Upload the each repeating instrument separately.
 
-![Variable information](images/view-dictionary.png)
-
-### Download Records with a clean grain, part #1
-
-Downloading records from REDCap is easy for classic projects (ie, non-longitudinal & non-repeating). Just pass the url & token to [`REDCapR::redcap_read()`](https://ouhscbbmc.github.io/REDCapR/reference/redcap_read.html).
-
-``` r
-ds <-
-  REDCapR::redcap_read(
-    redcap_uri  = credential$redcap_uri,
-    token       = credential$token
-  )$data
-```
-
-You can also specify constraints like forms, fields, & events for dataset that's tight and relevant.
-
-```{r}
-ds_pt <-
-  REDCapR::redcap_read(
-    redcap_uri  = credential$redcap_uri,
-    token       = credential$token,
-    # forms       = c("infusion_sequence", "demographics"),
-    fields      = c("infseq_id", "demo_mrn", "demo_birth_date", "demo_age"),
-    events      = "screening__enrollm_arm_1",
-    verbose     = FALSE
-  )$data
-  
-# View(ds_pt)
-```
-
-![Patient-level records](images/view-pt.png)
-
-### Download Records with a dirty grain
-
-```{r}
-ds_mishmash <-
-  REDCapR::redcap_read(
-    redcap_uri  = credential$redcap_uri,
-    token       = credential$token,
-    verbose     = FALSE
-  )$data
-```
-
-![Mishmash grain](images/view-mishmash.png)
-
-### Download Records with a clean grain, part #2
-
-```{r}
-ds_med <-
-  REDCapR::redcap_read(
-    redcap_uri    = credential$redcap_uri,
-    token         = credential$token,
-    fields        = c("medhx_conditionhx", "medhx_start_date", "medhx_grade_1"),
-    events        = "screening__enrollm_arm_1",
-    filter_logic  = "[medhx_conditionhx] != ''",
-    verbose       = FALSE
-  )$data
-
-ds_med |>
-  dplyr::select(
-    infseq_id,
-    # redcap_event_name,
-    # redcap_repeat_instrument,
-    med_instance  = redcap_repeat_instance,
-    condition_hx  = medhx_conditionhx,
-    start_date    = medhx_start_date,
-    grade_1       = medhx_grade_1
-  ) |>
-  dplyr::mutate(
-    med_instance  = as.integer(med_instance),
-    grade_1       = as.integer(grade_1),
-  )
-```
+The actual upload phase is pretty straight-forward
+--it's just a call to `REDCapR::redcap_write()`.
+Most of the vignette's code prepares the dataset so that the upload will run smoothly.
