--- a/exercises/00_welcome.qmd
+++ b/exercises/00_welcome.qmd
@@ -10,6 +10,12 @@ Quarto (the successor of **R Markdown**) enables you to weave together *human-re
 
 ## Running Code
 
+In Quarto, executable code is embedded as **code chunks**. They appear with a gray background, like so:
+
+```{r}
+# I'm a code chunk!
+```
+
 When you click the **green triangle** on the top right of the **code chunk**, the code gets run, and the result (if any) will appear underneath.
 
 Here is a code chunk that asks R to calculate the sum of `1 + 1`. Go ahead and run it!
@@ -18,16 +24,19 @@ Here is a code chunk that asks R to calculate the sum of `1 + 1`. Go ahead and r
 1 + 1
 ```
 
-The following code chunk will connect to a REDCap database and download its data into an object called `my_redcap_data`. Run the code chunk.
+The following code chunk will use the **REDCapR** package to connect to a REDCap database and download its data into an object called `my_redcap_data`. Run the code chunk.
 
 ```{r}
 library(REDCapR)
 
 creds <- retrieve_credential_local("../data-private/credentials.csv", 1)
 
-uri <- creds$uri
+uri <- creds$redcap_uri
 token <- creds$token
 
-## TODO: Right now this has lots of empty rows. Come up with a better solution. Maybe download from a different, simpler database?
-my_redcap_data <- redcap_read_oneshot(redcap_uri, token, forms = "demographics")$data
+my_redcap_data <- redcap_read_oneshot(uri, token)$data
 ```
+
+When this runs successfully, it will give you a message that [looks like an error]{style="color:red"} but is really just a status message. The HTTP status code "200" means "success."
+
+So if this ran without an error, pat yourself on the back! You just used R to access the REDCap API via REDCapR and downloaded a project. Pretty cool!
