--- a/exercises/03_advanced.qmd
+++ b/exercises/03_advanced.qmd
@@ -343,6 +343,34 @@ It might reveal something you didn't anticipate.
 But be aware that it will be in the block matrix format
 (*i.e.*, everything jammed into one rectangle.)
 
+Column Types
+===================================
+
+The data type of each variable can make a big difference to the reliability of a script.
+REDCap's underlying `redcap_data` table in MySQL/MariaDB is text.
+But analyses in R do better when they're cast appropriately to numbers & dates.
+
+If you're doing basic analyses in R, you've probably used the 
+[readr](https://readr.tidyverse.org/) package 
+to convert the text of a CSV to an R data frame.
+Under the hood, packages like REDCapR use readr to convert the text from REDCap
+to produce a data frame.
+
+Three reasonable options when reading from REDCap are:
+
+1. Let [`readr::read_csv()`](https://readr.tidyverse.org/reference/read_delim.html)
+   make it's best guess.
+
+1. Keep everything as a string/character, as it lives in `redcap_data`.
+   
+
+1. Ask [`REDCapR::redcap_metadata_coltypes()`](https://ouhscbbmc.github.io/REDCapR/reference/redcap_metadata_coltypes.html) 
+   to inspect project & variable settings to infer the likely type.
+   Then pass this specification to [`REDCapR::redcap_read()`](https://ouhscbbmc.github.io/REDCapR/reference/redcap_read.html)'s
+   `col_types` parameter, which is ultimately used by `readr::read_csv()`.
+
+   ![coltypes](images/coltypes.png)
+
 Token Security
 ===================================
 
@@ -395,6 +423,20 @@ Good Options
    Users never have to manually save or retrieve tokens as long as they're
    on the same network as the "token server" database.
 
+More REDCapR Documentation
+===================================
+
+<https://ouhscbbmc.github.io/>
+
+For a more thorough explanation of analytical approaches, go to REDCapR's website.
+Including the 7 vignettes like 
+
+* [Typical REDCap Workflow for a Data Analyst](https://ouhscbbmc.github.io/REDCapR/articles/workflow-read.html),
+* [Retrieving Longitudinal and Repeating Structures](https://ouhscbbmc.github.io/REDCapR/articles/longitudinal-and-repeating.html), and especially
+* [Troubleshooting REDCap API Calls](https://ouhscbbmc.github.io/REDCapR/articles/TroubleshootingApiCalls.html).
+
+
+![coltypes](images/redcapr-site.png)
 
 Other Packages in the REDCap Ecosystem
 ===================================
@@ -412,6 +454,6 @@ The most relevant packages to this audience include:
 * [tidyREDCap](https://github.com/raymondbalise/tidyREDCap) for R: Raymond Balise of U Miami has fxs for scenarios we haven't discussed today)
 * [REDCapDM](https://github.com/ubidi/REDCapDM) for R: --João Carmezim
 * [REDCap Custodian](https://github.com/ctsit/redcapcustodian/) for R: Philip Chase & Kyle Chesney of U Florida
-* [PyCap](https://github.com/redcap-tools/PyCap): similar goals as REDCapR --maintained by Paul Widenhaim of CHOP
+* [PyCap](https://github.com/redcap-tools/PyCap): similar goals as REDCapR --maintained by Paul Wildenhain of CHOP
 * [redcap-api](https://github.com/cctrbic/redcap-api) for C#: Michael Tran of VCU (inspired by Chris Nefcy)
 * [phpcap](https://github.com/iuredcap/phpcap): more focused on server tasks --maintained by Jim Mullen & Andy Arenson of U Indiana 
