--- a/exercises/01a_redcapr.qmd
+++ b/exercises/01a_redcapr.qmd
@@ -16,7 +16,7 @@ if (packageVersion("REDCapR") < "1.1.9005") {
 Retrieve Secure Token
 ----------------------------
 
-We'll discuss tokens in more depth at the end of the workshop. 
+We'll discuss token approaches at the end of the deep dive. 
 For now, know that a "token" is a secret value 
 that serves as your personal password to a specific REDCap project. 
 We'll retrieve it from a file stored in a (pretend) secured directory.
@@ -73,7 +73,7 @@ the table's grain is *patient*.
 If one row represents a single medication administered to a patient,
 the table's grain is *medication*.
 
-If your data frame has a poorly defined grain
+If your R data frame has a poorly defined grain
 you'll probably corrupt your data,
 or at least force ugly & brittle hacks into your code.
 
