--- a/exercises/03_advanced.qmd
+++ b/exercises/03_advanced.qmd
@@ -43,7 +43,7 @@ But no package holds your hand for *writing* to REDCap.
 Instead you'll need to create a tidy grain for each rectangle/data.frame,
 and upload each in a separate call.
 
-As described in the [Retrieving Longitudinal and Repeating Structures](https://ouhscbbmc.github.io/REDCapR/articles/longitudinal-and-repeating.html) vignette,
+As described in REDCapR's [Retrieving Longitudinal and Repeating Structures](https://ouhscbbmc.github.io/REDCapR/articles/longitudinal-and-repeating.html) vignette,
 the best way to read and write data from projects with longitudinal/repeating elements
 is to break up the "block matrix" dataset into individual datasets.
 Each rectangle should have a coherent grain.
